--- a/testing/index.html
+++ b/testing/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Learning git push and pull</title>
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem ex, placeat, asperiores ipsum quasi commodi expedita quia impedit, ab similique consequatur dicta voluptates doloremque corrupti laboriosam eius deserunt sint dolores?</p>
