--- a/testing/index.html
+++ b/testing/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title>Learning git push and pull</title>
 </head>
 <body>
+    <h1>learning git push and pull</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem ex, placeat, asperiores ipsum quasi commodi expedita quia impedit, ab similique consequatur dicta voluptates doloremque corrupti laboriosam eius deserunt sint dolores?</p>
 </body>
 </html>
