style update index.html

--- a/testing/index.html
+++ b/testing/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Learning git push and pull</title>
+    <style>background color: blue;</style>
 </head>
 <body>
     <h1>learning git push and pull</h1>
